--- a/GoShopping/MainWindow.xaml
+++ b/GoShopping/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GoShopping"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        Loaded="Window_Loaded">
     <Grid>
-        
+        <DataGrid Name="dataGrid1" HorizontalAlignment="Left" Height="340" Margin="56,38,0,0" VerticalAlignment="Top" Width="684"/>
     </Grid>
 </Window>
