--- a/GoShopping/Views/ShoppingListView.xaml
+++ b/GoShopping/Views/ShoppingListView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid >
-            <TextBox Text="{Binding Path=text}"></TextBox>
+            <TextBox Text="{Binding Path=Text}"></TextBox>
     </Grid>
 </UserControl>
