--- a/GoShopping/MainWindow.xaml
+++ b/GoShopping/MainWindow.xaml
@@ -27,23 +27,24 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
-            <ColumnDefinition Width="1.4*"/>
+            <ColumnDefinition Width="30"/>
             <ColumnDefinition />
-            <ColumnDefinition Width="1.4*"/>
+            <ColumnDefinition Width="30"/>
             <ColumnDefinition />
-            <ColumnDefinition Width="1.4*"/>
+            <ColumnDefinition Width="30"/>
             <ColumnDefinition />
-            <ColumnDefinition Width="1.4*"/>
+            <ColumnDefinition Width="30"/>
             <ColumnDefinition />
-            <ColumnDefinition Width="1.4*"/>
+            <ColumnDefinition Width="30"/>
             <ColumnDefinition />
-            <ColumnDefinition Width="1.4*"/>
+            <ColumnDefinition Width="30"/>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Button Content="+" Grid.Row="1" Grid.Column="1"></Button>
-        <Button Content="❤" Grid.Row="1" Grid.Column="3"></Button>
-        <Button Content="s" Grid.Row="1" Grid.Column="5"></Button>
-        <Button Content="Go!" Grid.Row="4" Grid.Column="9"  Grid.ColumnSpan="3" Click="Button_Click"/>
+        <Button x:Name="Home" Content="⌂" Grid.Row="1" Grid.Column="1" Click="Home_Click"></Button>
+        <Button Content="+" Grid.Row="1" Grid.Column="3"></Button>
+        <Button Content="❤" Grid.Row="1" Grid.Column="5"></Button>
+        <Button Content="s" Grid.Row="1" Grid.Column="7"></Button>
+        <Button x:Name="Go" Content="Go!" Grid.Row="4" Grid.Column="9"  Grid.ColumnSpan="3" Click="Go_Click"/>
         <ContentControl Grid.Row="3" Grid.RowSpan="3" Grid.Column="1" Grid.ColumnSpan="11" Content="{Binding}"/>
     </Grid>
 </Window>
