--- a/GoShopping/Views/NewDishView.xaml
+++ b/GoShopping/Views/NewDishView.xaml
@@ -5,8 +5,88 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GoShopping.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="Aquamarine">
-            
+             d:DesignHeight="450" d:DesignWidth="300">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="0.2*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+
+            <ColumnDefinition Width="0.2*"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.1*"></RowDefinition>
+            <RowDefinition Height="0.2*"></RowDefinition>
+            <RowDefinition Height="1*"></RowDefinition>
+            <RowDefinition Height="0"></RowDefinition>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Text="Dish Name" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientName1" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientQuantity1" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="3" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
+        <ComboBox Grid.Row="4" Grid.Column="6"/>
+        <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientName2" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientQuantity2" Grid.Row="7" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="6" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
+        <ComboBox Grid.Row="7" Grid.Column="6"/>
+        <TextBlock Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientName3" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="9" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientQuantity3" Grid.Row="10" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="9" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
+        <ComboBox Grid.Row="10" Grid.Column="6"/>
+        <TextBlock Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientName4" Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="12" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientQuantity4" Grid.Row="13" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="12" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
+        <ComboBox Grid.Row="13" Grid.Column="6"/>
+        <TextBlock Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientName5" Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="15" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientQuantity5" Grid.Row="16" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="15" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
+        <ComboBox Grid.Row="16" Grid.Column="6"/>
+        <TextBlock Grid.Row="18" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientName6" Grid.Row="19" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="18" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientQuantity6" Grid.Row="19" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="18" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
+        <ComboBox Grid.Row="19" Grid.Column="6"/>
+        <TextBlock Grid.Row="21" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientName7" Grid.Row="22" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="21" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
+        <TextBox x:Name="IngredientQuantity7" Grid.Row="22" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light"></TextBox>
+        <TextBlock Grid.Row="21" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
+        <ComboBox Grid.Row="22" Grid.Column="6"/>
     </Grid>
 </UserControl>
