--- a/GoShopping/Views/NewDishView.xaml
+++ b/GoShopping/Views/NewDishView.xaml
@@ -44,48 +44,48 @@
             <RowDefinition Height="0"></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Grid.Column="0" Text="Dish Name" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="DishName" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="DishName_OnLostFocus"></TextBox>
+        <TextBox x:Name="DishName" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="DishName_OnLostFocus" LostKeyboardFocus="DishName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientName1" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientName1" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus" LostKeyboardFocus="IngredientName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientQuantity1" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" ></TextBox>
+        <TextBox x:Name="IngredientQuantity1" Grid.Row="4" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus" LostKeyboardFocus="IngredientQuantity_OnLostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="3" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
-        <ComboBox x:Name="Unit1" ItemsSource="{Binding Units}" Grid.Row="4" Grid.Column="6" DropDownClosed="Unit_OnDropDownClosed"/>
+        <ComboBox x:Name="Unit1" ItemsSource="{Binding Units}" Grid.Row="4" Grid.Column="6" DropDownClosed="Unit_OnLostFocus" LostKeyboardFocus="Unit_LostKeyboardFocus"/>
         <TextBlock Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientName2" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientName2" Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus" LostKeyboardFocus="IngredientName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientQuantity2" Grid.Row="7" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientQuantity2" Grid.Row="7" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus" LostKeyboardFocus="IngredientQuantity_OnLostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="6" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
-        <ComboBox x:Name="Unit2" ItemsSource="{Binding Units}" Grid.Row="7" Grid.Column="6" DropDownClosed="Unit_OnDropDownClosed" />
+        <ComboBox x:Name="Unit2" ItemsSource="{Binding Units}" Grid.Row="7" Grid.Column="6" DropDownClosed="Unit_OnLostFocus" LostKeyboardFocus="Unit_LostKeyboardFocus" />
         <TextBlock Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientName3" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientName3" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus" LostKeyboardFocus="IngredientName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="9" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientQuantity3" Grid.Row="10" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientQuantity3" Grid.Row="10" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus" LostKeyboardFocus="IngredientQuantity_OnLostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="9" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
-        <ComboBox x:Name="Unit3" ItemsSource="{Binding Units}" Grid.Row="10" Grid.Column="6" DropDownClosed="Unit_OnDropDownClosed" />
+        <ComboBox x:Name="Unit3" ItemsSource="{Binding Units}" Grid.Row="10" Grid.Column="6" DropDownClosed="Unit_OnLostFocus" LostKeyboardFocus="Unit_LostKeyboardFocus" />
         <TextBlock Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientName4" Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientName4" Grid.Row="13" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus" LostKeyboardFocus="IngredientName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="12" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientQuantity4" Grid.Row="13" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientQuantity4" Grid.Row="13" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus" LostKeyboardFocus="IngredientQuantity_OnLostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="12" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
-        <ComboBox x:Name="Unit4" ItemsSource="{Binding Units}" Grid.Row="13" Grid.Column="6" DropDownClosed="Unit_OnDropDownClosed" />
+        <ComboBox x:Name="Unit4" ItemsSource="{Binding Units}" Grid.Row="13" Grid.Column="6" DropDownClosed="Unit_OnLostFocus" LostKeyboardFocus="Unit_LostKeyboardFocus" />
         <TextBlock Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientName5" Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientName5" Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus" LostKeyboardFocus="IngredientName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="15" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientQuantity5" Grid.Row="16" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientQuantity5" Grid.Row="16" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus" LostKeyboardFocus="IngredientQuantity_OnLostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="15" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
-        <ComboBox x:Name="Unit5" ItemsSource="{Binding Units}" Grid.Row="16" Grid.Column="6" DropDownClosed="Unit_OnDropDownClosed" />
+        <ComboBox x:Name="Unit5" ItemsSource="{Binding Units}" Grid.Row="16" Grid.Column="6" DropDownClosed="Unit_OnLostFocus" LostKeyboardFocus="Unit_LostKeyboardFocus" />
         <TextBlock Grid.Row="18" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientName6" Grid.Row="19" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientName6" Grid.Row="19" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus" LostKeyboardFocus="IngredientName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="18" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientQuantity6" Grid.Row="19" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientQuantity6" Grid.Row="19" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus" LostKeyboardFocus="IngredientQuantity_OnLostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="18" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
-        <ComboBox x:Name="Unit6" ItemsSource="{Binding Units}" Grid.Row="19" Grid.Column="6" DropDownClosed="Unit_OnDropDownClosed" />
+        <ComboBox x:Name="Unit6" ItemsSource="{Binding Units}" Grid.Row="19" Grid.Column="6" DropDownClosed="Unit_OnLostFocus" LostKeyboardFocus="Unit_LostKeyboardFocus" />
         <TextBlock Grid.Row="21" Grid.Column="0" Grid.ColumnSpan="2" Text="Ingredient" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientName7" Grid.Row="22" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientName7" Grid.Row="22" Grid.Column="0" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientName_OnLostFocus" LostKeyboardFocus="IngredientName_LostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="21" Grid.Column="3" Grid.ColumnSpan="2" Text="Quantity" FontFamily="Segoe UI Light" FontSize="14"/>
-        <TextBox x:Name="IngredientQuantity7" Grid.Row="22" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus"></TextBox>
+        <TextBox x:Name="IngredientQuantity7" Grid.Row="22" Grid.Column="3" Grid.ColumnSpan="2" FontSize="14" FontFamily="Segoe UI Light" LostFocus="IngredientQuantity_OnLostFocus" LostKeyboardFocus="IngredientQuantity_OnLostKeyboardFocus"></TextBox>
         <TextBlock Grid.Row="21" Grid.Column="6" Text="Unit" FontFamily="Segoe UI Light" FontSize="14"/>
-        <ComboBox x:Name="Unit7" ItemsSource="{Binding Units}" Grid.Row="22" Grid.Column="6" DropDownClosed="Unit_OnDropDownClosed" />
+        <ComboBox x:Name="Unit7" ItemsSource="{Binding Units}" Grid.Row="22" Grid.Column="6" DropDownClosed="Unit_OnLostFocus" LostKeyboardFocus="Unit_LostKeyboardFocus" />
     </Grid>
 </UserControl>
