--- a/GoShopping/Views/DishesListView.xaml
+++ b/GoShopping/Views/DishesListView.xaml
@@ -4,10 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GoShopping.Views"
+             xmlns:viewmodels="clr-namespace:GoShopping.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="300">
 
     <UserControl.Resources>
+        <ContextMenu x:Key="itemMenu">
+            <MenuItem Header="_Edit" Click="EditMenu_Click"/>
+            <MenuItem Header="_Delete" Click="Delete_Click"/>
+        </ContextMenu>
+        <DataTemplate x:Name="newDishViewTemplate" DataType="{x:Type viewmodels:NewDishViewModel}">
+            <local:NewDishView DataContext="{Binding}"/>
+        </DataTemplate>
         <ControlTemplate x:Key="ItemTemplate" TargetType="ListViewItem">
             <Border
                 BorderThickness="{TemplateBinding Border.BorderThickness}"
@@ -41,7 +49,9 @@
                 ItemsSource="{Binding}"
                 ItemTemplate="{StaticResource ItemDataTemplate}"
                 CheckBox.Unchecked="OnUncheckItem" 
-                CheckBox.Checked="checkedListView_Checked" FontFamily="Segoe UI Light" FontSize="16" BorderBrush="{x:Null}"/>
+                CheckBox.Checked="checkedListView_Checked" FontFamily="Segoe UI Light" FontSize="16" BorderBrush="{x:Null}"
+                ContextMenu="{StaticResource itemMenu}"/>
         </StackPanel>
+        <ContentControl x:Name="ContentControl" Width="250" Height="300" Content="{Binding}" Visibility="Collapsed"/>
     </Grid>
 </UserControl>
