--- a/GoShopping/Views/DishesListView.xaml
+++ b/GoShopping/Views/DishesListView.xaml
@@ -38,14 +38,8 @@
                 IsChecked="{Binding	RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListViewItem}}, Path=IsSelected}" />
         </DataTemplate>
     </UserControl.Resources>
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-        </Grid.RowDefinitions>
-            <StackPanel>
+    <Grid Name="NumericBoxGrid" x:FieldModifier="private" >
+        <StackPanel Name="StackPanelListView">
             <ListView
                 x:Name="CheckedListView"
                 SelectionMode="Multiple"
